# usb2can

./: .gitignore  CMakeLists.txt  README.md  README_zh.md
config/: FreeRTOSConfig.h  rtconfig.h  usb_config.h
docs/: 2026-04-14-usb2can-debug-record.md  2026-04-17-usb2can-stress-test-plan-en.md  2026-04-17-usb2can-stress-test-plan.md
docs/superpowers/plans/: 2026-04-17-usb2can-canfd-mode-implementation.md  2026-04-21-usb2can-canfd-brs-extended-frame-implementation.md
docs/superpowers/specs/: 2026-04-17-usb2can-canfd-mode-design.md  2026-04-21-usb2can-canfd-brs-extended-frame-design.md
inc/: usb2can_app.h  usb2can_bridge.h  usb2can_can.h  usb2can_cdc_acm.h  usb2can_config.h  usb2can_crc.h  usb2can_protocol.h  usb2can_types.h  usb2can_usb.h
src/: cdc_acm.c  main.c  usb2can_app.c  usb2can_bridge.c  usb2can_can.c  usb2can_crc.c  usb2can_protocol.c  usb2can_usb.c
tests/: test_recv_can_test.py  test_run_stress_test.py  test_send_can_test.py  usb2can_bridge_test.c  usb2can_config_test.c  usb2can_protocol_test.c
tools/: recv_can_test.py  run_stress_test.py  send_can_test.py
